--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,5 @@
             }
         ]
     },
-    "terminal.integrated.gpuAcceleration": "on"
+    "terminal.integrated.copyOnSelection": false
 }
